even more stuff

--- a/TglAbilities/pom.xml
+++ b/TglAbilities/pom.xml
@@ -7,7 +7,7 @@
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../tgl-parent</relativePath>
 	</parent>
-	<artifactId>tgl-effects</artifactId>
+	<artifactId>tgl-abilities</artifactId>
 
 	<dependencies>
 		<dependency>
@@ -15,6 +15,13 @@
 			<artifactId>tgl-effect-builder</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.pilaf</groupId>
+			<artifactId>tgl-effects</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.pilaf</groupId>
 			<artifactId>tgl-Commons</artifactId>
