--- a/tgl-parent/pom.xml
+++ b/tgl-parent/pom.xml
@@ -14,6 +14,7 @@
 	<modules>
 		<module>../tgl-effect-builder</module>
 		<module>../TglEffects</module>
+		<module>../TglAbilities</module>
 		<module>../musicFactory-backend-2</module>
 	</modules>
 </project>
