--- a/tgl-effect-builder/pom.xml
+++ b/tgl-effect-builder/pom.xml
@@ -14,5 +14,11 @@
 			<artifactId>tgl-Commons</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.pilaf</groupId>
+			<artifactId>tgl-api</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
