--- a/TglAbilities/pom.xml
+++ b/TglAbilities/pom.xml
@@ -10,6 +10,13 @@
 	<artifactId>tgl-abilities</artifactId>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>com.pilaf</groupId>
+			<artifactId>tgl-api</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.pilaf</groupId>
 			<artifactId>tgl-effect-builder</artifactId>
