--- a/tglApi/pom.xml
+++ b/tglApi/pom.xml
@@ -8,4 +8,11 @@
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../tgl-parent</relativePath>
 	</parent>
+	
+	<dependencies>
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+	</dependencies>
 </project>
