--- a/tglApi/pom.xml
+++ b/tglApi/pom.xml
@@ -14,5 +14,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.pilaf</groupId>
+			<artifactId>tgl-Commons</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
+	
 </project>
